--- a/new1.css
+++ b/new1.css
@@ -76,7 +76,7 @@ html, body {
  font-family: 'Source Sans Pro', sans-serif;
 }
 #landing .title {
- background: white;
+ background: black;
  padding: 60px;
  margin: 0 auto;
  text-align: center;
@@ -87,7 +87,7 @@ html, body {
  letter-spacing: 8px;
 }
 #landing .block {
- background: white;
+ background: black;
  padding: 6px;
  width: 820px;
  margin: 0 auto;
