--- a/new1.css
+++ b/new1.css
@@ -33,7 +33,7 @@ html, body {
  font-size: 24px;
  font-weight: 400;
  text-transform: center;
- color: white;
+ color: black;
  padding: 0;
  margin: 0;
 }
