--- a/новый 1.css
+++ b/новый 1.css
@@ -43,7 +43,7 @@ html, body {
  font-size: 70px;
  letter-spacing: 10px;
  text-align: center;
- color: black;
+ color: white;
  font-weight: 400;
  text-transform: uppercase;
  z-index: 10;
