--- a/новый 1.css
+++ b/новый 1.css
@@ -104,7 +104,7 @@ html, body {
  left: 0;
  width: 100%;
  height: 100%;
- background-color: yellow;
+ background-color: white;
  opacity: 0.70;
 }
 #landing .parallax-one {
