--- a/новый 1.css
+++ b/новый 1.css
@@ -1,196 +1,320 @@
-@import url(https://fonts.googleapis.com/css?family=Oswald:300,400,700);
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic);
+* {
+
+    box-sizing: border-box;
+
+}
 html, body {
-  font-family: 'Open Sans', sans-serif;
-  height: 100%;
-  margin: 0;
-  background-color: white;
+
+    font-family: 'Open Sans', sans-serif;
+
+    height: 100%;
+
+    margin: 0;
+
+  background: url("https://yandex.ru/images/search?text=фото%20ресторана&isize=eq&iw=1600&ih=900&from=tabbar&p=1&pos=8&rpt=simage&img_url=http%3A%2F%2Fimg1.goodfon.com%2Foriginal%2F1600x900%2F1%2F9e%2Fbar-chairs-tables-wine.jpg&lr=121808");
+
+  background-size: cover;
+
 }
 .box {
-    width: 80%;
-    position: centre;
+
+    width: 100%;
+
+    padding-right: 50px;
+
+    padding-left: 50px;
+
     margin: auto;
-  overflow: auto;
+
+}
+.landing {
+
+    position: relative;
+
+    background-color: transparent;
+
+}
+
+.landing .header {
+
+    display: inline;
+
+    padding: 10px 0 0;
+
+    position: relative;
+
+}
+
+
+
+.landing .header .links {
+
+    display: inline;
+
+    padding: 0;
+
+    margin: 0;
+
+    width: 100%;
+
+    text-align: right;
+
+}
+
+
+
+.landing .header .links li {
+
+    display: inline-block;
+
+    margin-left: 5px;
+
+    cursor: pointer;
+
+}
+
+.landing .header .links li:last-child {
+
+    border: 0;
+
+    border-radius: 20px;
+
+    padding: 10px 18px;
+
+    color: #FFF;
+
+    background-color: #6c63ff;
+
+    font-size: 18px;
+
+}
+
+.landing .info {
+
+    width: 100%;
+
+    float: left;
+
+    margin-top: 130px;
+
+}
+
+.landing .info h1 {
+
+    font-size: 44px;
+
+    margin: 0 0 20px;
+
+    line-height: 1.4;
+
+    color: white;
+
+}
+
+.landing .info p {
+
+    margin: 0;
+
+    line-height: 1.6;
+
+    font-size: 15px;
+
+    color: white;
+
+}
+
+.landing .info button {
+
+    border: 0;
+
+    border-radius: 20px;
+
+    padding: 12px 30px;
+
+    margin-top: 30px;
+
+    cursor: pointer;
+
+    color: #000000;
+
+    background-color: #6c63ff;
+
+}
+.clearfix {
+
+  clear: both;
+
+}
+
+
+
+.container {
+
+  display: block;
+
+  color: transparent;
+
+  margin: 0 auto;
+
+  text-align: center;
+
+}
+h2 {
+
+  font-weight: bold;
+
+  letter-spacing: .125rem;
+
+  text-transform: lowercase;
+
+  color: white;
+
+}
+
+
+
+li {
+
+  display: inline-block;
+
+  font-size: 1.5em;
+
+  list-style-type: none;
+
+  padding: 1em;
+
+  text-transform: lowercase;
+
+  color: white;
+
+  font-size: 18px;
+
+}
+
+li span {
+
+  display: block;
+
+  font-size: 4.5rem;
+
+}
+@media all and (max-width: 768px) {
+
+  h2 {
+
+    font-size: calc(1.5rem * var(--smaller));
+
   }
-#main {
- width: 100%;
- padding: 0;
+
+  li {
+
+    font-size: calc(1.125rem * var(--smaller));
+
+  }
+
+  li span {
+
+    font-size: calc(3.375rem * var(--smaller));
+
+  }
+
 }
-.content-asset p {
- margin: 0 auto;
-}
-.breadcrumb {
- display: none;
-}
-.margin-top-10 {
- padding-top: 10px;
-}
-.margin-bot-10 {
- padding-bottom: 10px;
-}
-#landing h1 {
- font-family: 'Oswald', sans-serif;
- font-size: 24px;
- font-weight: 400;
- text-transform: center;
- color: black;
- padding: 0;
- margin: 0;
+button:focus {
+
+  outline: none;
+
 }
 
-#landing h2 {
- font-family: 'Oswald', sans-serif;
- font-size: 70px;
- letter-spacing: 10px;
- text-align: center;
- color: white;
- font-weight: 400;
- text-transform: uppercase;
- z-index: 10;
- opacity: .9;
+
+
+#spoiler_button {
+
+ border: 0;
+
+    border-radius: 20px;
+
+    padding: 10px 18px;
+
+    color: #FFF;
+
+    background-color: #6c63ff;
+
+    font-size: 18px;
+
 }
 
-#landing h3 {
- font-family: 'Oswald', sans-serif;
- font-size: 14px;
- line-height: 0;
- font-weight: 400;
- letter-spacing: 8px;
- text-transform: center;
- color: black;
-}
-#landing p {
- font-family: 'Source Sans Pro', sans-serif;
- font-weight: 400;
- font-size: 14px;
- line-height: 24px;
-}
-.first-character {
- font-weight: 400;
- float: left;
- font-size: 84px;
- line-height: 64px;
- padding-top: 4px;
- padding-right: 8px;
- padding-left: 3px;
- font-family: 'Source Sans Pro', sans-serif;
-}
-#landing .title {
- background: white;
- padding: 60px;
- margin: 0 auto;
- text-align: center;
+
+
+#spoiler_button:hover {
+
+border: 0;
+
+    border-radius: 20px;
+
+    padding: 10px 18px;
+
+    color: #FFF;
+
+    background-color: aqua;
+
+    font-size: 18px;
+
 }
 
-#landing .title h1 {
- font-size: 35px;
- letter-spacing: 8px;
-}
-#landing .block {
- background: white;
- padding: 6px;
- width: 820px;
- margin: 0 auto;
- text-align: justify;
+
+
+#spoiler_button:active {
+
+  border: 0;
+
+    border-radius: 20px;
+
+    padding: 10px 18px;
+
+    color: #FFF;
+
+    background-color: aqua;
+
+    font-size: 18px;
+
 }
 
-#landing .block-gray {
- background: #f2f2f2;
- padding: 6px;
-}
-#landing .section-overlay-mask {
- position: absolute;
- top: 0;
- left: 0;
- width: 100%;
- height: 100%;
- background-color: white;
- opacity: 0.70;
-}
-#landing .parallax-one {
- padding-top: 200px;
- padding-bottom: 200px;
- overflow: hidden;
- position: relative;
- width: 100%;
- background-image: url("https://raw.githubusercontent.com/vikaFedyachkina/homework1/main/best-resorts-american-west-brush-creek-WESTRESORTSWB19-3858955dff3d42b1ac77a28bc26e90f4.jpg");
- background-attachment: fixed;
- background-size: cover;
- -moz-background-size: cover;
- -webkit-background-size: cover;
- background-repeat: no-repeat;
- background-position: top center;
-}
-#landing .line-break {
- background: linear-gradient(60deg, #008000, #ffd700, #dc143c);
- width: 100%;
- margin: 0 auto;
-}
-#landing .parallax-two {
- padding-top: 200px;
- padding-bottom: 200px;
- overflow: hidden;
- position: relative;
- width: 100%;
- background-image: url("https://raw.githubusercontent.com/vikaFedyachkina/homework1/main/Neff_Feature_Marinades.jpg");
- background-attachment: fixed;
- background-size: cover;
- -moz-background-size: cover;
- -webkit-background-size: cover;
- background-repeat: no-repeat;
- background-position: top center;
-}
-#landing .line-break {
- background: linear-gradient(60deg, #008000, #ffd700, #dc143c);
- width: 100%;
- margin: 0 auto;
-}
-#landing .parallax-three {
- padding-top: 200px;
- padding-bottom: 200px;
- overflow: hidden;
- position: relative;
- width: 100%;
- background-image: url("https://raw.githubusercontent.com/vikaFedyachkina/homework1/main/1600x900_bier-in-aller-welt.jpg");
- background-attachment: fixed;
- background-size: cover;
- -moz-background-size: cover;
- -webkit-background-size: cover;
- background-repeat: no-repeat;
- background-position: top center;
-}
-#landing .line-break {
- background: linear-gradient(60deg, #008000, #ffd700, #dc143c);
- width: 100%;
- margin: 0 auto;
-}
-@media screen and (max-width: 959px) and (min-width: 768px) {
- #flat .block {
-  padding: 40px;
-  width: 620px;
- }
-}
-@media screen and (max-width: 767px) {
- #flat .block {
-  padding: 30px;
-  width: 420px;
- }
- #flat h2 {
-  font-size: 30px;
- }
- #flat .block {
-  padding: 30px;
- }
- #flat .parallax-one, #flat .parallax-two, #flat .parallax-three {
-  padding-top: 100px;
-  padding-bottom: 100px;
- }
-}
-@media screen and (max-width: 479px) {
- #flat .block {
-  padding: 30px 15px;
-  width: 290px;
- }
+
+
+  .fadein, .fadeout {
+
+  height: 0;
+
+  -moz-transition: opacity 1s ease-in-out;
+
+  -o-transition: opacity 1s ease-in-out;
+
+  -webkit-transition: opacity 1s ease-in-out;
+
+
+
+  opacity: 0;  
+
 }
 
- 
+
+
+.fadein {
+
+  height: 100%;
+
+  opacity: 1;
+
+}
+#additional p {
+
+    margin: 0;
+
+    line-height: 1.6;
+
+    font-size: 15px;
+
+    color: white;
+
+
+    }
