--- a/новый 1.css
+++ b/новый 1.css
@@ -11,7 +11,7 @@ html, body {
 
     margin: 0;
 
-  background: url("https://yandex.ru/images/search?text=фото%20ресторана&isize=eq&iw=1600&ih=900&from=tabbar&p=1&pos=8&rpt=simage&img_url=http%3A%2F%2Fimg1.goodfon.com%2Foriginal%2F1600x900%2F1%2F9e%2Fbar-chairs-tables-wine.jpg&lr=121808");
+  background: url("https://raw.githubusercontent.com/vikaFedyachkina/homework1/main/bar-chairs-tables-wine.jpg");
 
   background-size: cover;
 
