--- a/новый 11.css
+++ b/новый 11.css
@@ -309,12 +309,10 @@ border: 0;
 #additional p {
 
     margin: 0;
-	
-	padding-right: 50px;
-
-    padding-left: 50px;
 
     line-height: 1.6;
+	
+	padding: 10px 18px;
 
     font-size: 15px;
 
