--- a/новый 11.css
+++ b/новый 11.css
@@ -124,6 +124,13 @@ html, body {
     color: white;
 
 }
+ p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
 
 .landing .info button {
 
